Expansion of search filters to facilitate data analysis
